--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@yaireo/tagify": "^2.19.1",
+        "croppie": "^2.6.4",
+        "quill": "^1.3.6"
     }
 }
